--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,4 +93,4 @@ jobs:
           fail_ci_if_error: false
           verbose: true
         env:
-          CODECOV_TOKEN: ${{ env.CODECOV_TOKEN }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
