add docs, add merges, add tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ select = [
     "C90",
     # Pydocstyle: Enforce docstrings
     "D",
+    # Unused imports
+    "F",
     # Isort: Enforce import order
     "I",
     # Numpy: Enforce numpy style
@@ -46,7 +48,7 @@ select = [
 ]
 ignore = [
     # Allow self and cls to be untyped, and allow Any type
-    "ANN101", "ANN102", "ANN401",
+    "ANN001", "ANN002", "ANN401",
     # Pydocstyle ignores
     "D100", "D101", "D104", "D203", "D212", "D401",
     # Allow use of f-strings in logging
@@ -68,6 +70,9 @@ ignore_missing_imports = true
 
 [tool.setuptools]
 packages = ["skeletoken"]
+
+[tool.setuptools.package-data]
+skeletoken = ["py.typed"]
 
 [tool.setuptools_scm]
 # can be empty if no extra settings are needed, presence enables setuptools_scm
