run tests as part of precommit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,8 @@ repos:
         entry: mypy
         language: python
         types: [python]
+      - id: pytest
+        name: pytest
+        entry: pytest tests/
+        language: python
+        types: [python]
