--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Set up virtual environment (uv)
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv venv .venv
+          uv venv .venv --clear
           echo "VIRTUAL_ENV=.venv" >> "$GITHUB_ENV"
           echo "$PWD/.venv/bin" >> "$GITHUB_PATH"
 
